modify code for a responsive webpage......check with smile !

--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
 	</section>
 
 
+			<!-- 16 jun work  -->
 	<section id="contact">
 		<center>
 			<h2 id="dont-tell"> Contact Me</h2>
@@ -230,6 +231,8 @@
 			<p><strong>Location:</strong>
 				[Remote] Kota, Rajasthan, India
 			</p>
+
+			<!-- 17 jun 2025 work  -->
 			<p><strong>Github:</strong>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -289,5 +292,9 @@
   });
 
 </script>
+
+
+
+<!-- pushed on GitHub on 17 jun 2025.... -->
 </body>
 </html>
